fixed unreadable default gl-complimentay bg color

--- a/src/style/CampaignPage.less
+++ b/src/style/CampaignPage.less
@@ -61,6 +61,7 @@
 				top: 15vh;
 				text-align: center;
 				width: 100%;
+				height: 100%; // otherwise it doesn't take up the whole section
 
 				.header-title {
 					font-size: 5vh;
